recursion.lessons.recursion.koch.Koch.scala.error
Koch:18: error: expected start of definition
	override def run() {
                 ^Koch:21: error: Unmatched closing brace '}' ignored here
}
^